fixed the layout on IE7

--- a/wp-content/themes/govintranetpress/css/ie.css
+++ b/wp-content/themes/govintranetpress/css/ie.css
@@ -284,14 +284,10 @@
 .ie7 .ht-feature-news .more-in-news {
   clear: both; }
 
-/* line 2, ../scss/ie/_sticky_news.scss */
-.ie7 #need-to-know .widget-title {
-  display: inline;
-  zoom: 1; }
-/* line 7, ../scss/ie/_sticky_news.scss */
-.ie7 #need-to-know .page-list {
+/* line 2, ../scss/ie/_need_to_know.scss */
+.ie7 .news-widget.need-to-know .page-list {
   margin-left: 0; }
-  /* line 10, ../scss/ie/_sticky_news.scss */
-  .ie7 #need-to-know .page-list .item {
+  /* line 5, ../scss/ie/_need_to_know.scss */
+  .ie7 .news-widget.need-to-know .page-list .page {
     display: inline;
     zoom: 1; }
