--- a/wp-content/themes/govintranetpress/scss/widgets/dw_news/_need_to_know.scss
+++ b/wp-content/themes/govintranetpress/scss/widgets/dw_news/_need_to_know.scss
@@ -10,8 +10,8 @@
     margin: 0 0 0 $grid-gutter/2;
     padding: 5px 15px;
     background-color: $white;
-    color: #428bca;
     border-bottom: none;
+    color: #428bca;
     text-align: center;
   }
 
@@ -53,7 +53,7 @@
     }
 
     .news-content {
-      margin-right: 15px;
+      padding-right: 15px;
     }
 
     .news-date {
@@ -68,8 +68,8 @@
   }
 
   .page-list {
-    text-align: center;
     margin-bottom: 20px;
+    text-align: center;
 
     .page {
       display: inline-block;
@@ -90,6 +90,15 @@
           color: $sticky-news;
         }
       }
+    }
+  }
+}
+
+@include lte_tablet_mq() {
+  .news-widget.need-to-know {
+    .news-item .news-content {
+      margin-top: 20px;
+      padding-left: 15px;
     }
   }
 }
